--- a/instruction.html
+++ b/instruction.html
@@ -35,7 +35,7 @@
 
     <main>
       <h1>INSTRUKTION</h1>
-      <p>Underoverskrift</p>
+      <p>Det gør ondt – men du er ikke død endnu!</p>
       <section class="info-graphic">
         <svg id="Lag_1" data-name="Lag 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 520.51 595.28">
           <defs>
@@ -744,12 +744,12 @@
         </svg>
       </section>
       <section class="info-text">
-        <h2>Overskrift</h2>
+        <h2>Bi-polar, eller er det bare bierne?</h2>
         <article>
-          <p class="placeholder">INFO-TEKST</p>
+          <p class="placeholder">Info venter...</p>
         </article>
-        <aside id="efficiency" class="info-box">INFO-BOX</aside>
-        <aside id="requirement" class="info-box">INFO-BOX</aside>
+        <aside id="efficiency" class="info-box">Info venter...</aside>
+        <aside id="requirement" class="info-box">Info venter...</aside>
       </section>
     </main>
 
