--- a/register.html
+++ b/register.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/burger.css" />
     <link rel="stylesheet" href="css/cards.css" />
-    <link rel="stylesheet" href="css/form.css" />
+    <link rel="stylesheet" href="css/forms.css" />
     <link rel="icon" type="image/png" href="img/fav.png" />
     <title>Emergency Site</title>
   </head>
@@ -37,15 +37,68 @@
       <h1>INDBERET</h1>
       <section id="form-section">
         <article id="form-info">
-          <h2>Overskrift</h2>
-          <p>Tekst</p>
+          <h2>RAPPORTÉR DIT STIK – FOR VIDENSKABEN!</h2>
+          <p>Vi samler data, tårer og hævede hænder for at forstå biernes onde plan. Udfyld ærligt.</p>
         </article>
-        <form id="webform"></form>
+        <form id="webform">
+          <div class="form-group">
+            <label for="name">Fulde navn:</label>
+            <input type="text" id="name" name="name" placeholder="" required />
+            <p class="error-message">F.eks. Sofie Stukket</p>
+          </div>
+          <div class="form-group">
+            <label for="age">Alder:</label>
+            <input type="number" id="age" name="age" min="1" max="120" placeholder="" required />
+            <p class="error-message">...eller gæt bare</p>
+          </div>
+          <div class="form-group">
+            <label for="time">Tidspunkt for stik:</label>
+            <input type="time" id="time" name="time" required />
+            <p class="error-message">Vælg en tid</p>
+          </div>
+          <div class="form-group">
+            <label for="location">Sted for stik:</label>
+            <input type="text" id="location" name="location" placeholder="" required />
+            <p class="error-message">Venstre arm, sjæl, stolthed...</p>
+          </div>
+          <div class="form-group">
+            <label for="beeCount">Antal bier involveret:</label>
+            <input type="number" id="beeCount" name="beeCount" min="1" placeholder="" required />
+            <p class="error-message">1... eller 100?</p>
+          </div>
+          <div class="form-group">
+            <p>Brugte du en EpiPen?</p>
+
+            <label>
+              <input id="epipen_ja" type="radio" name="epipen" value="ja" required />
+              Ja – jeg stak mig heroisk midt i kaos 💉 </label
+            ><br />
+
+            <label>
+              <input id="epipen_nej" type="radio" name="epipen" value="nej" />
+              Nej – jeg stolede på min indre styrke (dum idé) 😬
+            </label>
+          </div>
+          <div class="form-group">
+            <label for="description">Beskrivelse af hændelsen:</label>
+            <textarea id="description" name="description" rows="4" placeholder="Fortæl din dramatiske historie her..."></textarea>
+          </div>
+
+          <button type="submit">🚨 Indsend rapport</button>
+        </form>
       </section>
       <section id="form-summary">
         <h2>Summary</h2>
         <article>
-          <p class="placeholder">Opsummering</p>
+          <div>
+            <p id="summary_font">Fulde navn: <span id="full_name_output"></span></p>
+            <p id="summary_font">Alder: <span id="age_output"></span></p>
+            <p id="summary_font">Tidspunkt: <span id="time_output"></span></p>
+            <p id="summary_font">Sted for stik: <span id="location_output"></span></p>
+            <p id="summary_font">Antal bier involveret: <span id="beeCount_output"></span></p>
+            <p id="summary_font">Epipen taget: <span id="epipen_ja_output"></span></p>
+            <p id="summary_font">Beskrivelse af episode: <span id="description_output"></span></p>
+          </div>
         </article>
       </section>
     </main>
@@ -77,5 +130,6 @@
     </footer>
     <script src="js/burger.js"></script>
     <!-- <script src="js/main.js"></script> -->
+    <script src="js/register.js"></script>
   </body>
 </html>
