--- a/instruction.html
+++ b/instruction.html
@@ -19,8 +19,9 @@
     <header>
       <nav>
         <div id="logotype-wrapper" class="logo">
-          <a href="index.html"> LOGO-TYPE </a>
+          <a href="index.html"> <img src="img/Logo_bi.svg" alt="" /></a>
         </div>
+        <button id="toggle">Light/darkmode</button>
         <ul class="menu">
           <li><a class="menuItem" href="instruction.html">Nærkontakt </a></li>
           <li><a class="menuItem" href="register.html">Indberet</a></li>
@@ -780,7 +781,7 @@
       </nav>
     </footer>
     <script src="js/burger.js"></script>
-
+    <script src="js/darkmode.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
