--- a/register.html
+++ b/register.html
@@ -19,8 +19,9 @@
     <header>
       <nav>
         <div id="logotype-wrapper" class="logo">
-          <a href="index.html"> LOGO-TYPE </a>
+          <a href="index.html"> <img src="img/Logo_bi.svg" alt="" /> </a>
         </div>
+        <button id="toggle">Light/darkmode</button>
         <ul class="menu">
           <li><a class="menuItem" href="instruction.html">Nærkontakt </a></li>
           <li><a class="menuItem" href="register.html">Indberet</a></li>
@@ -131,5 +132,6 @@
     <script src="js/burger.js"></script>
     <!-- <script src="js/main.js"></script> -->
     <script src="js/register.js"></script>
+    <script src="js/darkmode.js"></script>
   </body>
 </html>
