--- a/instruction.html
+++ b/instruction.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/infographic.css" />
     <link rel="icon" type="image/png" href="img/fav.png" />
     <title>Emergency Site</title>
+    <link rel="icon" type="image/x-icon" href="img/fly_swatter.svg" />
   </head>
   <body id="instruction">
     <header>
