--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/burger.css" />
     <link rel="stylesheet" href="css/cards.css" />
-    <link rel="icon" type="image/png" href="img/fav.png" />
+    <link rel="icon" type="image/png" href="img/fly_swatter.svg" />
     <title>Emergency Site</title>
     <link rel="icon" type="image/x-icon" href="img/fly_swatter.svg" />
   </head>
